<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.BaseCameraFragment"
    android:fitsSystemWindows="false"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_start_verification_title"
        style="@style/BlackTopInstructionsTextView"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_40dp"
        android:gravity="center"
        android:text="@string/let_s_get_you_verified"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_onboarding"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen_100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_start_verification_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_requirements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TransparentButtonTextView"
        android:text="@string/requirements"
        android:paddingHorizontal="@dimen/dimen_0dp"
        android:paddingBottom="@dimen/dimen_4dp"
        android:background="@drawable/purple_dashed_line"
        android:layout_marginBottom="@dimen/margin_30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_start_verification_button"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_start_verification_button"
        style="@style/PurpleButtonTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_20dp"
        android:layout_marginBottom="@dimen/margin_30dp"
        android:background="@drawable/purple_button_background"
        android:foreground="@drawable/rectangular_button_ripple"
        android:text="@string/start_verification"
        tools:ignore="UnusedAttribute"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>