<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/windowBackground">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_poa_requirements_description"
        style="@style/DocumentInstructionTitleTextView"
        android:text="@string/poa_requirements_description"
        app:layout_constraintEnd_toEndOf="@+id/cl_no_cropped_poa"
        app:layout_constraintStart_toStartOf="@+id/cl_good_poa"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_good_poa"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_marginTop="@dimen/dimen_30dp"
        app:layout_constraintEnd_toStartOf="@+id/cl_no_cropped_poa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_poa_requirements_description">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_good_poa"
            style="@style/RequirementImageView"
            android:src="@drawable/good_poa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/DocumentInstructionTextView"
            android:text="@string/good_poa"
            app:layout_constraintEnd_toEndOf="@+id/iv_good_poa"
            app:layout_constraintStart_toStartOf="@+id/iv_good_poa"
            app:layout_constraintTop_toBottomOf="@+id/iv_good_poa" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_no_cropped_poa"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cl_good_poa"
        app:layout_constraintTop_toTopOf="@+id/cl_good_poa">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_cropped_poa"
            style="@style/RequirementImageView"
            android:src="@drawable/no_cropped_poa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/DocumentInstructionTextView"
            android:text="@string/no_cropped_poa"
            app:layout_constraintEnd_toEndOf="@+id/iv_cropped_poa"
            app:layout_constraintStart_toStartOf="@+id/iv_cropped_poa"
            app:layout_constraintTop_toBottomOf="@+id/iv_cropped_poa" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_no_filter_poa"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintStart_toStartOf="@+id/cl_good_poa"
        app:layout_constraintTop_toBottomOf="@+id/cl_good_poa">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_no_filters_poa"
            style="@style/RequirementImageView"
            android:src="@drawable/no_filters_poa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/DocumentInstructionTextView"
            android:text="@string/no_filters_poa"
            app:layout_constraintEnd_toEndOf="@+id/iv_no_filters_poa"
            app:layout_constraintStart_toStartOf="@+id/iv_no_filters_poa"
            app:layout_constraintTop_toBottomOf="@+id/iv_no_filters_poa" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_no_expired_poa"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_0dp"
        app:layout_constraintStart_toStartOf="@+id/cl_no_cropped_poa"
        app:layout_constraintTop_toTopOf="@+id/cl_no_filter_poa">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_no_expired_poa"
            style="@style/RequirementImageView"
            android:src="@drawable/no_expired_poa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/DocumentInstructionTextView"
            android:text="@string/no_expired_poa"
            app:layout_constraintEnd_toEndOf="@+id/iv_no_expired_poa"
            app:layout_constraintStart_toStartOf="@+id/iv_no_expired_poa"
            app:layout_constraintTop_toBottomOf="@+id/iv_no_expired_poa" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_no_expired_poa" />

</androidx.constraintlayout.widget.ConstraintLayout>