<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen_20dp"
        android:paddingBottom="@dimen/dimen_30dp">

        <io.dataspike.mobile_sdk.view.custom_views.DashedUnderlineTextView
            android:id="@+id/tv_requirements"
            style="@style/RequirementsTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/cl_horizontal_buttons"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_horizontal_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_requirements"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/b_left"
                style="@style/Button"
                tools:text="@string/redo_photo"
                android:layout_marginTop="@dimen/dimen_30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/b_right"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:visibility="visible"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/b_right"
                style="@style/Button"
                tools:text="@string/_continue"
                android:layout_marginTop="@dimen/dimen_30dp"
                tools:icon="@drawable/upload_icon"
                app:iconGravity="textStart"
                app:layout_constraintStart_toEndOf="@+id/b_left"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:visibility="visible"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/b_top"
            style="@style/Button"
            tools:text="@string/start_verification"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:layout_goneMarginTop="@dimen/dimen_30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_horizontal_buttons"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="visible"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/b_bottom"
            style="@style/Button"
            tools:text="@string/start_verification"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:visibility="visible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</merge>