<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_poi_requirements_title"
        style="@style/DocumentInstructionTitleTextView"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/poi_requirements_description"
        app:layout_constraintEnd_toEndOf="@+id/cl_no_black_and_white_poi"
        app:layout_constraintStart_toStartOf="@+id/cl_good_poi"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_good_poi"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_marginTop="@dimen/margin_30dp"
        app:layout_constraintEnd_toStartOf="@+id/cl_no_black_and_white_poi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_poi_requirements_title">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_good_poi"
            android:layout_width="@dimen/requirement_card_width_138dp"
            android:layout_height="@dimen/requirement_card_height_108dp"
            android:src="@drawable/good_poi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/DocumentInstructionTextView"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_margin"
            android:text="@string/good_poi"
            app:layout_constraintEnd_toEndOf="@+id/iv_good_poi"
            app:layout_constraintStart_toStartOf="@+id/iv_good_poi"
            app:layout_constraintTop_toBottomOf="@+id/iv_good_poi" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_no_black_and_white_poi"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cl_good_poi"
        app:layout_constraintTop_toTopOf="@+id/cl_good_poi">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_no_black_and_white_poi"
            android:layout_width="@dimen/requirement_card_width_138dp"
            android:layout_height="@dimen/requirement_card_height_108dp"
            android:src="@drawable/no_black_and_white_poi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/DocumentInstructionTextView"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_margin"
            android:text="@string/no_black_and_white_poi"
            app:layout_constraintEnd_toEndOf="@+id/iv_no_black_and_white_poi"
            app:layout_constraintStart_toStartOf="@+id/iv_no_black_and_white_poi"
            app:layout_constraintTop_toBottomOf="@+id/iv_no_black_and_white_poi" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_no_dark_poi"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="@+id/cl_good_poi"
        app:layout_constraintTop_toBottomOf="@+id/cl_good_poi">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_no_dark_poi"
            android:layout_width="@dimen/requirement_card_width_138dp"
            android:layout_height="@dimen/requirement_card_height_108dp"
            android:src="@drawable/no_dark_poi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/DocumentInstructionTextView"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_margin"
            android:text="@string/no_dark_poi"
            app:layout_constraintEnd_toEndOf="@+id/iv_no_dark_poi"
            app:layout_constraintStart_toStartOf="@+id/iv_no_dark_poi"
            app:layout_constraintTop_toBottomOf="@+id/iv_no_dark_poi" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_no_blurry_poi"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_0dp"
        app:layout_constraintStart_toStartOf="@+id/cl_no_black_and_white_poi"
        app:layout_constraintTop_toTopOf="@+id/cl_no_dark_poi">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_no_blurry_poi"
            android:layout_width="@dimen/requirement_card_width_138dp"
            android:layout_height="@dimen/requirement_card_height_108dp"
            android:src="@drawable/no_blurry_poi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/DocumentInstructionTextView"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_margin"
            android:text="@string/no_blurred_poi"
            app:layout_constraintEnd_toEndOf="@+id/iv_no_blurry_poi"
            app:layout_constraintStart_toStartOf="@+id/iv_no_blurry_poi"
            app:layout_constraintTop_toBottomOf="@+id/iv_no_blurry_poi" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_no_damaged_poi"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_0dp"
        app:layout_constraintStart_toStartOf="@+id/cl_no_dark_poi"
        app:layout_constraintTop_toTopOf="@+id/cl_no_expired_poi">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_no_damaged_poi"
            android:layout_width="@dimen/requirement_card_width_138dp"
            android:layout_height="@dimen/requirement_card_height_108dp"
            android:src="@drawable/no_damaged_poi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/DocumentInstructionTextView"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_margin"
            android:text="@string/no_damaged_poi"
            app:layout_constraintEnd_toEndOf="@+id/iv_no_damaged_poi"
            app:layout_constraintStart_toStartOf="@+id/iv_no_damaged_poi"
            app:layout_constraintTop_toBottomOf="@+id/iv_no_damaged_poi" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_no_expired_poi"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="@+id/cl_no_blurry_poi"
        app:layout_constraintTop_toBottomOf="@+id/cl_no_blurry_poi">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_no_expired_poi"
            android:layout_width="@dimen/requirement_card_width_138dp"
            android:layout_height="@dimen/requirement_card_height_108dp"
            android:src="@drawable/no_expired_poi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/DocumentInstructionTextView"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_margin"
            android:text="@string/no_expired_poi"
            app:layout_constraintEnd_toEndOf="@+id/iv_no_expired_poi"
            app:layout_constraintStart_toStartOf="@+id/iv_no_expired_poi"
            app:layout_constraintTop_toBottomOf="@+id/iv_no_expired_poi" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_no_expired_poi" />
</androidx.constraintlayout.widget.ConstraintLayout>